[package]
name = "msg"
version = "0.1.0"
edition = "2021"

[build]
target = "wasm32-unknown-unknown"

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
regex = { version = "1.10.2", features = ["pattern"] }
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
chrono = "0.4.31"
leptos = { version = "0.5.1", features = ["csr", "nightly", "template_macro"] }
plotly = { version = "0.8.4", features = ["plotly_image", "wasm"] }
web-sys = { version = "0.3.64", features = [
    "File",
    "FileList",
    "FileReader",
    "HtmlInputElement",
] }
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
